Completed with scrollbar-hide and row

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Netflix Clone</title>
   </head>
-  <body>
+  <body class="scrollbar-hide">
     <div id="root"></div>
   </body>
 </html>
